# cmd-chat

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependencies.yml  release.yml
cmdchat/: __init__.py  cli.py  client_cli.py  crypto.py  protocol.py  types.py
cmdchat/client/: __init__.py  core.py  files.py  history.py  io.py  loops.py  run.py  tls.py
cmdchat/lib/: __init__.py  file_transfer.py  message.py  renderers.py  session.py
cmdchat/server/: __init__.py  heartbeat.py  io.py  metrics.py  run.py  state.py  tls.py
cmdchat/server/handlers/: __init__.py  chat.py  files.py  system.py
cmdchat/ui/: __init__.py
cmdchat/utils/: __init__.py  formatting.py  sanitization.py  validation.py
script/: run_coverage.sh  run_tests.py  test_e2e.sh
tests/: conftest.py  test_crypto.py  test_e2e_integration.py  test_lib_message.py  test_lib_renderers.py  test_protocol.py  test_server_heartbeat.py  test_server_metrics.py  test_server_state.py  test_types.py  test_utils_formatting.py  test_utils_sanitization.py  test_utils_validation.py
